<resources>
    <string name="app_name">AirTickets</string>
    <string name="tickets">Авиабилеты</string>
    <string name="hotels">Отели</string>
    <string name="short_way">Короче</string>
    <string name="subscription">Подписки</string>
    <string name="profile">Профиль</string>
    <string name="search_for_cheap_tickets">Поиск дешевых"\n"авиабилетов</string>
    <string name="default_where_from">Откуда - Москва</string>
    <string name="default_where">Куда - Турция</string>
    <string name="slogan">Музыкально отлететь</string>
    <string name="search">Поиск</string>
    <string name="close">Закрыть</string>
    <string name="difficult_route">Сложный"\n"маршрут</string>
    <string name="anywhere">Куда угодно</string>
    <string name="weekends">Выходные</string>
    <string name="hot_tickets">Горячие"\n"билеты</string>
    <string name="popular">Популярное направление</string>
    <string name="back">Назад</string>
    <string name="reverse">Поменять местами</string>
    <string name="conversely">обратно</string>
    <string name="economy">1,эконом</string>
    <string name="filters">фильтры</string>
    <string name="view_all_tickets">Посмотреть все билеты</string>
    <string name="direct_flights">Прямые рейсы</string>
    <string name="show_all">Показать все</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">Фильтр</string>
    <string name="price_chart">График цен</string>
    <string name="dash">—</string>
    <string name="slash">/</string>
    <string name="without_transfers">Без пересадок</string>
    <string name="default_error">Default error</string>
    <string name="not_selected_where">Не выбрано место назначения</string>
    <string name="not_selected_where_from">Не выбрано место отправления</string>
    <string name="flight">%s-%s</string>
    <string name="time">%s:%s</string>
    <string name="flight_time">%sч. %sм.</string>
    <string name="short_date">%s %s, %s</string>
    <string name="long_date">%s %s, 1 пассажир</string>
    <string name="digits">1234567890абвгдеёжзиклмнопрстуфхцчшщъыьэюя., -АБВГДЕЁЖЗИКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ</string>
</resources>