<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/tickets"
        android:title="@string/tickets"
        android:icon="@drawable/tickets"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/hotels"
        android:title="@string/hotels"
        android:icon="@drawable/hotels"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/short_way"
        android:title="@string/short_way"
        android:icon="@drawable/short_way"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/subscription"
        android:title="@string/subscription"
        android:icon="@drawable/subscription"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/profile"
        app:showAsAction="ifRoom"
        />

</menu>