<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.air_tickets.AirTicketsFragment">

    <TextView
        android:id="@+id/search_for_cheap_tickets_text_view"
        style="@style/SloganTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:text="@string/search_for_cheap_tickets"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/search_tickets_container_card_view"
        style="@style/AirTicketScreenCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/middle_margin"
        android:layout_marginTop="@dimen/big_margin"
        app:layout_constraintTop_toBottomOf="@id/search_for_cheap_tickets_text_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/small_padding">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/middle_margin"
                android:backgroundTint="@color/gray"
                android:contentDescription="@string/search"
                android:src="@drawable/search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <View
                android:id="@+id/line_view"
                android:layout_width="0dp"
                android:layout_height="@dimen/line_width"
                android:layout_marginEnd="@dimen/large_margin"
                android:background="@color/light_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/search_button"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/where_from_edit_text"
                style="@style/SearchEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/middle_margin"
                android:hint="@string/default_where_from"
                app:layout_constraintBottom_toTopOf="@id/line_view"
                app:layout_constraintEnd_toEndOf="@id/line_view"
                app:layout_constraintStart_toStartOf="@id/line_view"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck,TouchTargetSizeCheck" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/where_edit_text"
                style="@style/SearchEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/middle_margin"
                android:hint="@string/default_where"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/line_view"
                app:layout_constraintStart_toStartOf="@id/line_view"
                app:layout_constraintTop_toBottomOf="@id/line_view"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck,TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/slogan_text_view"
        style="@style/SloganTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/middle_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:text="@string/slogan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_tickets_container_card_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/offers_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        app:layout_constraintTop_toBottomOf="@id/slogan_text_view"
        android:layout_marginHorizontal="@dimen/middle_margin"/>


</androidx.constraintlayout.widget.ConstraintLayout>