<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view_all_tickets.ViewAllTicketsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info_flight_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/middle_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:background="@color/light_black"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_black"
            android:contentDescription="@string/back"
            android:src="@drawable/baseline_arrow_back_24"
            android:tint="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

        <TextView
            android:id="@+id/flight_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/middle_margin"
            android:background="@color/light_black"
            android:textColor="@color/white"
            android:textSize="@dimen/middle_text_size"
            app:layout_constraintBottom_toTopOf="@id/info_flight_text_view"
            app:layout_constraintStart_toEndOf="@id/back_button"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Москва-Сочи" />

        <TextView
            android:id="@+id/info_flight_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/middle_margin"
            android:background="@color/light_black"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/middle_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/back_button"
            app:layout_constraintTop_toBottomOf="@id/flight_text_view"
            tools:text="23 февраля, 1 пассажир" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tickets_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/middle_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginBottom="@dimen/half_toggle_button_size"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_flight_container"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/toggle_button_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/small_padding"
            android:text="@string/filter"
            app:backgroundTint="@color/blue"
            app:icon="@drawable/filters"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/price_chart_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/small_padding"
            android:text="@string/price_chart"
            app:backgroundTint="@color/blue"
            app:icon="@drawable/chart"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

</androidx.constraintlayout.widget.ConstraintLayout>